Refactor project structure: rename package, update dependencies, enhance CSS variables, and modify App component to integrate MapLoader.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "brc-bed-map",
+  "name": "bed_map",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "paper": "^0.12.17",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
@@ -39,7 +40,7 @@
     "d3-transition": {
       "d3-color": "^3.1.0"
     },
-    "@types/react": "19.0.2",
-    "@types/react-dom": "19.0.2"
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2"
   }
 }
